--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -639,7 +639,7 @@ Teaching & Dynamics & No & 21 & 193.50 & 21.22 & 4.63\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicate performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -671,7 +671,7 @@ Teaching & Articulation & Staccato & No & 21 & -136.84 & 21.52 & 4.70\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicate performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -703,7 +703,7 @@ Teaching & Dynamics & Piano & No & 21 & 60.88 & 4.76 & 1.04\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicate performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -735,7 +735,7 @@ Teaching & Dynamics & PtoF & No & 21 & 21.98 & 9.56 & 2.09\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicate performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -788,7 +788,7 @@ Teaching & Dynamics & No & 9 & 0.955 & 0.052 & 0.017\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicate performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -820,7 +820,7 @@ Teaching & Articulation & Staccato & No & 9 & -0.749 & 0.073 & 0.024\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicate performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -852,7 +852,7 @@ Teaching & Dynamics & Piano & No & 9 & 61.81 & 3.76 & 1.25\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicate performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -884,7 +884,7 @@ Teaching & Dynamics & PtoF & No & 9 & 20.66 & 12.09 & 4.03\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicate performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
